maj correspondance weather status et svg

--- a/meteosite/previsions/templates/previsions/display_previsions_ville.html
+++ b/meteosite/previsions/templates/previsions/display_previsions_ville.html
@@ -37,7 +37,7 @@
 
                   <div class="wind">
                     <i class="fa-solid fa-wind"></i>
-                    <span>{{prevision.force_vent|floatformat:0}} Km/h/h</span>
+                    <span>{{prevision.force_vent|floatformat:0}} Km/h</span>
                   </div>
 
                 </div>
